# CausalMask-XAI

./: .gitignore  CausalMask-XAI.ipynb  CausalMask-XAI.md  README.md  pyproject.toml
.opencode/agents/: causalmask-researcher.md
.opencode/skills/causalmask-xai-research/: SKILL.md
.serena/: project.yml
artifacts/phases/: phase_00_status.json  phase_02_status.json  phase_04_status.json  phase_05_status.json
data/: README.md
data/manifests/: bus_uclm_manifest_summary_v1.json  bus_uclm_manifest_v1.parquet  busi_manifest_summary_v1.json  busi_manifest_v1.parquet
data/raw/: dataset_sources.json
notebooks/: 00_environment_and_repository_audit.ipynb  01_download_and_extract_datasets.ipynb  02_dataset_manifest_and_quality_audit.ipynb  03_duplicate_audit_and_fixed_splits.ipynb  04_baseline_pipeline_smoke_test.ipynb  05_baseline_five_fold_cross_validation.ipynb
reports/: data_audit.md  deviations.md  experiment_registry.csv  implementation_plan.md
reports/results/: baseline_internal_metrics.json  baseline_internal_table.csv
src/causalmask/: __init__.py  reproducibility.py
src/causalmask/data/: __init__.py  datasets.py  discover.py  duplicate_audit.py  manifest.py  splits.py  transforms.py
src/causalmask/evaluation/: calibration.py  classification.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: __init__.py  synthetic_data.py
tests/unit/: test_calibration.py  test_checkpointing.py  test_classification.py  test_duplicate_audit.py  test_engine.py  test_manifest.py  test_models.py  test_splits.py  test_transforms.py
(+3 files in other folders)
